--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "aristotle",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "run": "bun run index.ts"
+  },
   "devDependencies": {
     "bun-types": "latest"
   },
